# luci-app-tn-swupdate

./: CHANGELOG.md  LICENSE  README.md  i18n.sh  test-deploy.cmd
htdocs/luci-static/resources/preload/: swupdate.js
htdocs/luci-static/resources/swupdate/: swupdate.css
htdocs/luci-static/resources/view/swupdate/: swupdate.js
po/ru/: swupdate.po
po/templates/: swupdate.pot
root/usr/share/luci/menu.d/: luci-app-tn-swupdate.json
root/usr/share/rpcd/acl.d/: luci-app-tn-swupdate.json
src/: CMakeLists.txt  main.c  multipart_parser.c  multipart_parser.h
